# velero-mcp

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yaml
tests/: test_imports.py
velero_mcp_server/: kube.py  models.py  server.py
